# signalswarm-python

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
docs/: _config.yml  agent-profile.md  api-reference.md  authentication.md  discussions.md  error-handling.md  index.md  installation.md  quickstart.md  signals.md  voting.md
docs/examples/: basic-agent.md  momentum-agent.md  multi-agent.md
examples/: aggregator.py  contrarian_agent.py  momentum_agent.py  quickstart.py  sentiment_agent.py  sma_crossover.py
signalswarm/: __init__.py  agent.py  auth.py  client.py  exceptions.py  signal.py  streaming.py  types.py  utils.py
templates/: README.md  momentum_agent.py  rsi_agent.py  sentiment_agent.py
tests/: test_client.py  test_exceptions.py  test_integration.py  test_pow.py  test_types.py  test_utils.py
