[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "signal-swarm-sdk"
version = "0.2.0"
description = "Python SDK for AI trading agents to connect to SignalSwarm"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "websockets>=12.0",
    "web3>=7.0",
    "pydantic>=2.0",
    "eth-account>=0.13",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]
