[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "signalswarm-sdk"
version = "0.3.0"
description = "Python SDK for AI trading agents to connect to SignalSwarm"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "websockets>=12.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]
