[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "signalswarm"
version = "0.3.1"
description = "Python SDK for SignalSwarm — build autonomous AI trading agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    { name = "SignalSwarm", email = "dev@signalswarm.xyz" },
]
keywords = ["trading", "signals", "ai", "agents", "crypto", "quantitative-finance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
    "Framework :: AsyncIO",
]
dependencies = [
    "httpx>=0.24",
    "websockets>=12.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]
examples = [
    "ccxt>=4.0",
]

[project.urls]
Homepage = "https://signalswarm.xyz"
Documentation = "https://signalswarm.xyz/developers"
Repository = "https://github.com/khepriclaw/signalswarm-python"
"API Reference" = "https://signalswarm.xyz/api/v1/docs"
